# courses

./: README.md  software_design_and_architecture.md
College Calculus – Full Course with Python Code/: README.md
PyTorch for Deep Learning & Machine Learning – Full Course/: 1.ipynb  README.md
algebra/: .gitignore  Foundational_Math_1_(Learn).ipynb  README.md  Week 01.ipynb  Week 02.ipynb  Week 03 Extra.ipynb  Week 03.ipynb  Week 04 -  Function and Graphing .ipynb  Week 04 - Extra.ipynb  Week 04.ipynb  Week 05 - extra.ipynb  Week 05 - slope intercept.ipynb  Week 06 - factoring.ipynb  Week 07 - Extra.ipynb  Week 07 - Graphing System of equations.ipynb  Week 08 - Solving system of equation.ipynb  Week 10 - Quadratic.ipynb  Week 11 - Parent Graph.ipynb  Week 11 - extras.ipynb  Week 12 - Extras .ipynb  Week 12 - Simple Interest.ipynb  Week 12 - selling t-shirt .ipynb  Week 13 - Extra.ipynb  Week 13 - Interest Formula.ipynb  Week 14 - exponent and logarithm.ipynb  pyproject.toml  word problems.ipynb
algebra/.virtual_documents/: Untitled.ipynb  Week 01.ipynb  Week 03 Extra.ipynb
algebra/.virtual_documents/algebra/: Week 02.ipynb
algebra/test/: 1.ipynb  mro.py  mro_static.py  mro_static_explicit.py  mro_test.py  mro_test_explicit.py  mro_test_explicit_obj.py  x.py
latex/: a.tex
postgresql_dba/: conf.py  high_level_database_concepts.rst  index.rst  introduction.rst  rdbms_concepts.rst
precalculus/: README.md  pc_your_notebook.ipynb  precalculus.ipynb
software_design_and_architecture/: README.md  clean_code_principles.md  object_oriented_programming.md  (+1 more)
(+19 files in other folders)
